Trying to deploy Lab7

--- a/Lab7/my-app/package.json
+++ b/Lab7/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shubaduba55.github.io/KPIFront-End/Lab7/my-app",
+  "homepage": "https://shubaduba55.github.io/KPIFront-End/Lab7",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
